--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#Interests">Interests</a></li>
       </ul>
     </nav>
-    
+
 
   <main>
     <section>
@@ -52,7 +52,10 @@
         <li>St. Hannah's Boys High School (2018)</li>
       </ul>
       <!-- Replace the # below with your actual online link to the uploaded CV -->
-      <a href="https://your-link-to-cv.com/CriticosCV.pdf" download target="_blank">Download My CV</a>
+       <a href="https://raw.githubusercontent.com/CriticosPLP25/Portfolio-Building-Hackathon/main/Criticos%20CV.pdf" download target="_blank">
+        Download My CV
+       </a>
+
     </section>
 
     <section id="Skills">
